edição de duas imagens para reduzir o tamanho dos arquivos

--- a/galeria.html
+++ b/galeria.html
@@ -37,7 +37,7 @@
 
         <div class="linha-foto">
             <img src="" alt="">
-            <div class="foto"><img src="img/comida01.png" alt="Foto de Comida" /></div>
+            <div class="foto"><img src="img/comida01.webp" alt="Foto de Comida" /></div>
             <div class="foto"><img src="img/comida02.jpg" alt="Foto de Comida" /></div>
             <div class="foto"><img src="img/comida03.jpg" alt="Foto de Comida" /></div>
         </div>
