--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Pimenta Doce</title>
+    <link rel="stylesheet" href="css/form-contato.css" type="text/css">
+    <title>Pimenta Doce Contato</title>
 </head>
 
 <body>
@@ -28,39 +29,29 @@
             </nav>
         </div>
     </header>
-    <img id="banner" src="img/banner.jpg"
-        alt="Imagem de um restaurante com poltronas azuis e cadeiras de cobre com estofados em couro" width="500">
-    <section class="conteudo-principal">
-        <h2 class="titulo-secao">
-            Sobre o Restaurante
-        </h2>
 
-        <p>Localizado do bairro da Paulista <strong>O Restaurante Pimenta Doce</strong> traz um novo conceito de
-            restaurante para você vivenciar. Fundado em 2022, o restaurante Pimenta Doce entrega uma experiência única
-            onde os próprios clientes preparam suas pratos com ajuda dos chefes, o chefe é escolhido de acordo com a
-            nacionalidade do prato escolido.</p>
-        <p id="missao">
-            <em>Nossa missão é: <strong>"difuldir a divercidade culinária por meio do apredizado na
-                    prática"</strong></em>
-        </p>
-        <p>
-            Nosso atendimento é único e nunca caimos na rotina, são diversos pratos que mudam a cada 15 dias.
-        </p>
-    </section>
     <section class="servicos">
-        <h3 class="titulo-centralizado">
-            Serviços
-        </h3>
-        <ul>
-            <li class="item">Pratos Veganos</li>
-            <li class="item">Não alérgicos</li>
-            <li class="item">Bebidas Artesanais</li>
-            <li class="item">Espaço Kids</li>
-            <li class="item">Reservas</li>
-        </ul>
-        <img class="imagem-servicos" src="img/servicos.jpg"
-            alt="Pessoa vestida com roupa de chef de cozinha, segurando uma panela com a mãe direira e uma colher com a esquerda, ela está despejando um molho com a colher emcima de uma prato com carnes e outros alimentos."
-            width="500">
+        <div class="container">
+            <h3 class="titulo -centralizado titulo-secao">Faça sua reserva</h3>
+        </div>
+        <form action="post">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Digite o nome do responsavel pela reserva"/>
+
+            <label for="telefone">Telefone</label>
+            <input type="tel" id="telefone" name="telefone" placeholder="Digite o telefone de contato"/>
+
+            <label for="qtdpessoas">Mesa para quantos:</label>
+            <input type="number" id="qtdpessoas" name="qtdpessoas" step="1" minlength="1"/>
+
+            <label for="obs">Observações</label>
+            <textarea name="obs" id="obs" cols="30" rows="10" placeholder="Informa suas restrições alimentares"></textarea>
+
+            <button type="submit"> <i class="far fa-paper-plane"></i> Enviar</button>
+
+
+
+        </form>
     </section>
 
     <footer>
